# nscript

./: Cargo.toml  LICENSE  id_ed25519.pub  readme.md
example/: init.nc  main.rs
example/Nscript_dot_nc_examples/: arrayfilter.nc  arraypushroll.nc  arrays.nc  arraysearch.nc  arrayshuffle.nc  arraysort.nc  asyncloops.nc  classes.nc  combine.nc  coroutines.nc  curl.nc  days_in_ms.nc  dircreate.nc  dirdelete.nc  dirlist.nc  dirmove.nc  discordmsg.nc  else.nc  elseif.nc  exec.nc  exit.nc  file_read_utf8.nc  filecopy.nc  filedelete.nc  fileexist.nc  filemove.nc  fileread.nc  filesize.nc  filesizebytes.nc  filewrite.nc  for.nc  fromright.nc  function.nc  helloworld.nc  hextostring.nc  hours_in_ms.nc  ifstatements.nc  inpool.nc  instring.nc  load.nc  (+25 more)
src/: lib.rs
src/includes/: interpreter_new.rs  nscript_3d.rs  nscript_api_lib.rs  nscript_arrays.rs  nscript_egui.rs  nscript_encryption.rs  nscript_file_and_system.rs  nscript_functions.rs  nscript_http_html.rs  nscript_interpreter.rs  nscript_networking.rs  nscript_rust_fn_bindings.rs  nscript_sound.rs  nscript_strings.rs  nscript_time.rs  nscript_zip.rs
